# etl_aqi_argentina

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  requirements2.txt
.github/workflows/: run-tests.yml
SQL/: 1_create_squema.sql  2_create_tables.sql  2_crete_tables.sql
dags/: etl_dag_avg.py  etl_dag_bsas.py  etl_dag_diario.py  etl_dag_lapampa.py  etl_dag_mendo.py  etl_dag_metrica_diaria.py  etl_dag_metrica_historica.py  etl_dag_sanfe.py
dags/config/: config.py
dags/etl_modules/: et_redshift_diario.py  extract_avg.py  extract_city.py  extract_met_avg.py  extract_metrica.py  load_to_redshift.py  transform_data_city.py  transform_data_metrica.py
tests/: test_etl_dag_metrica_diaria.py  test_etl_dag_santafe.py  test_extract_city.py  test_transform_data_city.py
